--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -6,9 +6,10 @@
     android:background="@color/white"
     android:gravity="center">
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="256dp"
+        android:layout_height="384dp"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/app_name"
         android:src="@mipmap/launch_screen_logo"
         />
 </LinearLayout>
